--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "sanitize-filename": "^1.6.3",
+    "yup": "^1.7.0"
   },
   "main": "app.js",
   "bin": {
