--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-world-flags": "^1.6.0",
     "shadcn-ui": "^0.5.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animated": "^1.0.1",
