--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
